fixtures/oci1/invalid/signature-kid-missing/obt.jws
eyJhbGciOiJFZERTQSIsInR5cCI6IkpXUyJ9.eyJpZCI6InRlc3QtZml4dHVyZS0wLjEuMCIsImRvbWFpbiI6InRlc3QtZml4dHVyZSIsInZlcnNpb24iOiIwLjEuMCIsInByb3ZpZGVySWQiOiJvbnRvbG9neTpwYWN0LWZpeHR1cmVzIiwidHJ1c3RUaWVyIjoiVGllcjEiLCJwb2xpY3lTbmFwc2hvdElkIjoic2hhMjU2OmFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWEiLCJmaWxlcyI6eyJjb250ZXh0Ijoic2hhMjU2OmFiMGYyZDNjYjc2YzkyYmE0MzYzYzRjMjYyYjU1ZDY5ZmU2N2QwMjgzMjcxZjdhMTI1M2MyNmY1OTJmYTAxNWMiLCJ2b2NhYiI6InNoYTI1NjoxNDA0YWJlZTg2MTY5NTg4ZWQxYWUxNTFmYTBkYjgxNzcyN2MxYTQ1NzFkNDFiOTQxNWY3Yjc3ZTY5OWE4NzE4In0sInByZWNlZGVuY2UiOltdLCJkZW55V2lucyI6dHJ1ZSwibmJmIjoiMjAyNi0wMy0wMlQwMDowMDowMFoiLCJleHAiOiIyMDMwLTAzLTAyVDAwOjAwOjAwWiIsInJldkVwb2NoIjoxfQ.woSFDDuD9wJe5vcf7vSNgmNxvVm4PzCPpyryNgVV7NQY7N7WYGsRx49VKupFQZVE4nRllwmWege5xKLSqmtTCw
